syntax = "proto3";

option java_package = "com.boswelja.smartwatchextensions.extensions";
option java_multiple_files = true;

message ExtensionSettings {
  bool phoneLockingEnabled = 1;

  bool batterySyncEnabled = 2;
  bool phoneChargeNotiEnabled = 3;
  bool phoneLowNotiEnabled = 7; // Higher number since it was added later
  int32 batteryLowThreshold = 8;
  int32 batteryChargeThreshold = 4;

  bool dndSyncToPhone = 5;
  bool dndSyncWithTheater = 6;
}
